trigger .github/workflows/ci.yml

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,9 @@ on:
     branches: [master]
     paths-ignore:
       - .gitignore
+      - bin/
       - README.md
       - LICENSE
-      - bin
 
 jobs:
   build:
