--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "firebase:config": "node bin/get-firebase-config.js"
+    "firebase:config": "node bin/get-firebase-config.js",
+    "start": "cd server && npm start",
+    "dev": "concurrently \"npm run serve\" \"cd server && npm run dev\""
   },
   "dependencies": {
     "axios": "^0.21.1",
@@ -21,6 +23,7 @@
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
+    "concurrently": "^5.3.0",
     "node-sass": "^4.12.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
@@ -32,5 +35,9 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ]
+  ],
+  "engines": {
+    "npm": ">=7.0.14",
+    "node": ">=15.3.0"
+  }
 }
