--- a/package.json
+++ b/package.json
@@ -4,9 +4,8 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
+    "build": "bin/build.sh",
     "firebase:config": "node bin/get-firebase-config.js",
-    "start": "cd server && npm start",
     "dev": "concurrently \"npm run serve\" \"cd server && npm run dev\""
   },
   "dependencies": {
@@ -35,9 +34,5 @@
     "> 1%",
     "last 2 versions",
     "not dead"
-  ],
-  "engines": {
-    "npm": ">=7.0.14",
-    "node": ">=15.3.0"
-  }
+  ]
 }
