--- a/package.json
+++ b/package.json
@@ -11,19 +11,17 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "firebase": "^8.2.4",
+    "firebase": "^8.2.10",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.2",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11",
-    "vuex": "^3.6.2"
+    "vuetify": "^2.2.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "concurrently": "^5.3.0",
-    "node-sass": "^4.12.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
     "vue-cli-plugin-vuetify": "~2.0.9",
