--- a/package.json
+++ b/package.json
@@ -11,24 +11,22 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
-    "firebase": "^8.2.10",
-    "video-js": "^0.5.0",
+    "firebase": "^8.3.0",
     "vue": "^2.6.11",
-    "vue-axios": "^3.2.2",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.4.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "concurrently": "^5.3.0",
-    "firebase-tools": "^9.6.0",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
-    "vue-cli-plugin-vuetify": "~2.0.9",
+    "vue-cli-plugin-vuetify": "^2.2.2",
     "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.3.0"
+    "vuetify-loader": "^1.7.2"
   },
   "browserslist": [
     "> 1%",
