--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.3.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
+    "vue-i18n": "^8.24.1",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.6"
   },
