--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "vue-axios": "^3.2.4",
     "vue-i18n": "^8.24.1",
     "vue-router": "^3.2.0",
-    "vuetify": "^2.4.6"
+    "vuetify": "^2.4.6",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
