--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue-axios": "^3.2.4",
     "vue-i18n": "^8.24.1",
     "vue-router": "^3.2.0",
+    "vue-socket.io": "^3.0.10",
     "vuetify": "^2.4.6",
     "vuex": "^3.6.2"
   },
