--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
+    "lodash": "^4.17.20",
     "socket.io": "^4.0.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
