--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
+    "vuetify": "^2.4.6",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
