--- a/firebase.json
+++ b/firebase.json
@@ -3,7 +3,7 @@
     "rules": "./database.rules.json"
   },
   "storage": {
-    "rules": "./storage.rules"
+    "rules": "./firestore.rules"
   },
   "hosting": {
     "public": "dist",
