--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
     "lodash": "^4.17.20",
+    "videojs-youtube": "^2.6.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0",
+    "vue-video-player": "^5.0.2",
     "vuetify": "^2.4.6",
     "vuex": "^3.6.2"
   },
