--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
     "lodash": "^4.17.20",
+    "moment": "^2.29.1",
     "videojs-youtube": "^2.6.1",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
