--- a/firebase.json
+++ b/firebase.json
@@ -23,13 +23,19 @@
         "source": "/tm",
         "destination": "https://t.me/nweoonews",
         "type": 301
-      }
-    ],
-    "rewrites": [
+      },
       {
         "source": "/a/:id",
         "destination": "https://api.nweoo.com/articles/:id"
+        "type": 301
       },
+      {
+        "source": "/r/:id",
+        "destination": "https://api.nweoo.com/reports/:id"
+        "type": 301
+      },
+    ],
+    "rewrites": [
       {
         "source": "**",
         "destination": "/index.html"
