--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "firebase": "^8.3.0",
+    "jsdom": "^16.6.0",
     "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "videojs-youtube": "^2.6.1",
