--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,26 +2,25 @@ name: CI [Production]
 on:
   push:
     paths:
-      - 'src/**'
-      - 'public/**'
-      - 'firebase.json'
+      - "src/**"
+      - "public/**"
     branches:
       - master
 jobs:
   deploy:
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout
-      uses: actions/checkout@v2
-    - name: Setup
-      uses: actions/setup-node@v1
-      with:
-        node-version: 12
-    - name: Install
-      run: |
-        npm install
-        npm install --global firebase-tools
-    - name: Build
-      run: npm run build
-    - name: Deploy
-      run: firebase deploy --project "${{ secrets.FIREBASE_PROJECT }}" --token "${{ secrets.FIREBASE_TOKEN }}"
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Setup
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12
+      - name: Install
+        run: |
+          npm install
+          npm install --global firebase-tools
+      - name: Build
+        run: npm run build
+      - name: Deploy
+        run: firebase deploy --project "${{ secrets.FIREBASE_PROJECT }}" --token "${{ secrets.FIREBASE_TOKEN }}"
