--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -21,6 +21,9 @@ jobs:
         run: |
           echo '- deleting .git/'
           rm -rf .git
+          git config --global init.defaultBranch master
+          git config --global user.name "${{ secrets.GITHUB_USER }}"
+          git config --global user.email "${{ secrets.GITHUB_USER }}@users.noreply.github.com"
           git init
           git add .
           git commit -m 'auto push from Github Workflow (development)'
