--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -22,8 +22,8 @@ jobs:
           echo '- deleting .git/'
           rm -rf .git
           git config --global init.defaultBranch master
-          git config --global user.name "${{ secrets.GITHUB_USER }}"
-          git config --global user.email "${{ secrets.GITHUB_USER }}@users.noreply.github.com"
+          git config --global user.name "NweOo Developer"
+          git config --global user.email "nweoo22222@yandex.com"
           git init
           git add .
           git commit -m 'auto push from Github Workflow (development)'
