--- a/.github/workflows/development.yml
+++ b/.github/workflows/development.yml
@@ -30,7 +30,7 @@ jobs:
           git commit -m 'auto push from Github Workflow (development)'
       - name: Add Remote
         run: |
-          git remote add origin https://${{ secrets.GITHUB_USER }}:${{ secrets.GITHUB_PASSWORD }}@github.com/${{ secrets.GITHUB_USER }}/${{ secrets.GITHUB_REPOSITORY }}.git
+          git remote add origin https://etherio97:${{ secrets.GH_SECRET_TOKEN }}@github.com/etherio97/nwe-oo-vue.git
       - name: Pushing
         run: |
           git push origin master --force
