--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -2,6 +2,7 @@ name: CI [Production]
 on:
   push:
     paths:
+      - ".github/workflows/**"
       - "src/**"
       - "public/**"
     branches:
