--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "ejs": "^2.7.4",
     "firebase": "^8.3.0",
     "jsdom": "^16.6.0",
     "lodash": "^4.17.20",
