--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,7 @@
 {
   "functions": {
-    "api/**.js": {
-      "memory": 1024,
-      "maxDuration": 10
+    "api/*/*.js": {
+      "excludeFiles": "*.ejs"
     }
   },
   "cleanUrls": true,
@@ -14,6 +13,7 @@
   ],
   "rewrites": [
     { "source": "/articles/:id", "destination": "/api/articles" },
+    { "source": "/amp/:id", "destination": "/api/amp" },
     {
       "source": "/feed.xml",
       "destination": "https://nweoo-developer.herokuapp.com/feed"
