--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,34 +1,20 @@
 {
   "compilerOptions": {
     "target": "es5",
-      "module": "esnext",
-        "strict": true,
-          "moduleResolution": "node",
-            "experimentalDecorators": true,
-              "skipLibCheck": true,
-                "esModuleInterop": true,
-                  "allowSyntheticDefaultImports": true,
-                    "sourceMap": true,
-                      "baseUrl": ".",
-                        "paths": {
-      "@/*": [
-        "src/*"
-      ]
+    "module": "esnext",
+    "strict": true,
+    "moduleResolution": "node",
+    "experimentalDecorators": true,
+    "skipLibCheck": true,
+    "esModuleInterop": true,
+    "allowSyntheticDefaultImports": true,
+    "sourceMap": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
     },
-    "lib": [
-      "esnext",
-      "dom",
-      "dom.iterable",
-      "scripthost"
-    ]
+    "lib": ["esnext", "dom", "dom.iterable", "scripthost"]
   },
-  "include": [
-    "src/*.js",
-    "src/*.vue",
-    "src/**/*.js",
-    "src/**/*.vue",
-  ],
-    "exclude": [
-      "node_modules"
-    ]
+  "include": ["src/*.js", "src/*.vue", "src/**/*.js", "src/**/*.vue"],
+  "exclude": ["node_modules"]
 }
