--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@vue/cli-service": "^3.3.1",
     "sass": "^1.19.0",
     "sass-loader": "^8.0.2",
+    "vercel": "^23.0.0",
     "vue-cli-plugin-vuetify": "^2.2.2",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.7.2"
